2008-11-16  Donal K. Fellows  <dkf@users.sf.net>

	* doc/wm.n: Added note about [wm overrideredirect] so that users will
	avoid making unwarranted assumptions about how magical it is.
	Triggered by [Bug 2282861] discussion.

2008-11-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tk.h:        The TIP 125 implementation permits the
	* generic/tkFrame.c:   [wm manage] command to manage any widget but
	* macosx/tkMacOSXWm.c: only those with Frame instance data should be
	* unix/tkUnixWm.c:     permitted. We now check for the suitability and
	* win/tkWinWm.c:       raise an error for non-frame widgets. Updated
	* test/wm.test:        the tests and documentation. See also [Bug
	* doc/wm.n:            2239034]

2008-11-12  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkWidget.c: Reworked widget construction and
	destruction sequence; fixes [Bug 2207435] and several other problems
	discovered during investigation of same.
	* generic/ttk/ttkButton.c (CheckbuttonInitialize): Account for
	initializeProc being called earlier in the construction sequence now.
	* tests/ttk/ttk.test: Updated test suite.

2008-11-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/text.tcl: Handle windows with funky names by avoiding use of
	* test/text.test:   the window path for anchors. [Bug 1777362]

2008-11-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkImgPhoto.c    Fix [Bug 2265860] new test failures

2008-11-11  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkWidget.c(BeginDrawing): Don't crash when application
	uses nondefault visual. [Bug 2264732]

2008-11-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4:	Reverted change from 2008-11-06 (was under the
			impression that "-Wno-implicit-int" added an extra
			warning).
	* win/configure: (regenerated)
	* unix/tcl.m4:	Use -O2 as gcc optimization compiler flag, and get rid
			of -Wno-implicit-int for UNIX.
	* unix/configure: (regenerated)
